# data-visualization-platform

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.frontend  LICENSE  PROJECT_PROGRESS.md  README.md  build.sh  docker-compose.yml  nginx.conf  package-lock.json  requirements.txt
backend/: CMakeLists.txt
backend/include/: ApiServer.h  DatabaseManager.h
backend/src/: ApiServer.cpp  DatabaseManager.cpp  main.cpp
data_processing/: calculate_ltv.py  create_database.py  main.py  process_data.py  requirements.txt
database/: app.db
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  App.vue  main.ts
frontend/src/api/: cache.ts  index.ts
frontend/src/assets/: base.css  main.css
frontend/src/components/: AppLayout.vue
frontend/src/components/Charts/: PieChart.tsx  TimelineChart.tsx
frontend/src/hooks/: useDateContext.tsx
frontend/src/layouts/: MainLayout.tsx
frontend/src/pages/Overview/: index.tsx
frontend/src/router/: index.ts
frontend/src/services/: api.ts
frontend/src/stores/: viewState.ts
frontend/src/utils/: dateUtils.ts  formatters.ts
frontend/src/views/: DetailsView.vue  HomeView.vue  LtvView.vue
scripts/: setup.sh
后端考核/: test.csv  源数据说明.txt  题目说明.txt
